@@ -1,5 +1,4 @@
 Manifest-Version: 1.0
 Main-Class: org.apache.tools.ant.Main
-Class-Path: xml-apis.jar xercesImpl.jar optional.jar xalan.jar
 
 
